# various-concepts

asyncio/: aiohttp_intro.py  asyncio_client.py  asyncio_intro.py  ayncio_generator.py  exception_handling.py  full_client.py  full_server.py
boost/: CMakeLists.txt  CMakePresets.json  README.md
boost-apps/: .gitignore  CMakeLists.txt
boost-apps/src/: sync_echo_client.cpp  websockets.cpp
boost-asio/: .gitignore  CMakeLists.txt  README.md
boost-asio/src/: async_echo_server.cpp  coroutines_echo_server.cpp  mtls_client.cpp  mtls_server.cpp  simple_timer.cpp  sync_echo_client.cpp  sync_echo_server.cpp
boost/src/: async_server.cpp  coroutines_echo_server.cpp  simple_timer.cpp  sync_echo_client.cpp  sync_echo_server.cpp  websockets.cpp
c-capnpproto/: CMakeLists.txt  README.md
c-capnpproto/capnp/: addressbook.capnp
c-capnpproto/src/: main.cpp
certificates/: README.md
comms-interfaces/: ahb.sv  ahb_test.sv  apb_ram.sv  apb_ram_if.sv  apb_ram_test.sv  axi.sv  dff.sv  dff_test.sv  fifo.sv  fifo_test.sv  i2c.sv  i2c_test.sv  spi_if.sv  spi_master.sv  spi_master_test.sv  spi_slave_test.sv  uart.sv  whishbone.sv  whishbone_test.sv
comms-interfaces/testbenches/: Assignment21.sv  Assignment22.sv  Assignment23.sv  Assignment24.sv  Assignment31.sv  Assignment33.sv  Example1.sv  Example2.sv  ExampleInterface.sv  ExampleInterface2.sv  ExampleMailbox.sv  ExampleTestbench.sv  ExamplesClasses.sv  ExamplesIPC.sv  ExamplesRandomization.sv  Transaction.sv  fifo.sv
conan/simple-conan/: CMakeLists.txt  CMakeUserPresets.json  README.md
conan/simple-gtest/: CMakeLists.txt  CMakeUserPresets.json  README.md
conan/tool-requires/: CMakeUserPresets.json  README.md  conanfile.txt
cpp-concepts/: .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  binary_search_tree.cpp  buy_sell.cpp  comparison_operator.cpp  concepts.cpp  examples-metaprogramming.cpp  fold.cpp  lvalues_rvalues.cpp  memory_addresses.md  move_semantics.cpp  new_operator.cpp  parallel_program_design.md  ranges.cpp  reverse.cpp  unique.cpp
cpp-concepts/include/: joiner.h  sequential_queue.h  thread_guard.h
cpp-concepts/src/: atomic.cpp  buy_sell.cpp  concepts.cpp  concurrency_condition_variables.cpp  concurrency_locks.cpp  concurrency_threads.cpp  coroutines.cpp  exceptions.cpp  foreach.cpp  lvalues_rvalues.cpp  move_semantics.cpp  new_operator.cpp  parallel1.cpp  parallel2.cpp  parallel_find.cpp  parallel_stl.cpp  quick_sort.cpp  thread_pools.cpp  tree.cpp  vector.cpp
cudo-intro/: .gitignore  CMakeLists.txt  README.md
cudo-intro/src/: hello.cu  kernel.cu  properties.cu
embassy-server/: Cargo.toml  README.md  memory.x
embassy-server/.cargo/: config.toml
embassy-server/client/: client.py
embassy-server/src/: init.rs  lib.rs  main.rs  static_cell.rs
geolocation/: Makefile  geolocation.cpp
grpc-cpp/: CMakeLists.txt  README.md
grpc-cpp/protos/mygrpc/v1/: greeter.proto
grpc-cpp/src/: greeter_server.cpp
grpc-python/: .gitignore  README.md  generate.sh  pyproject.toml
grpc-python/protos/mygrpc/v1/: greeter.proto
grpc-python/src/mygrpc/: greeter_client.py  greeter_server.py  main.py
grpc-python/src/mygrpc/v1/: greeter_pb2.py  greeter_pb2.pyi  greeter_pb2_grpc.py
hyper-mtls/: Cargo.toml  README.md
hyper-mtls/src/: lib.rs
io_multiplexing/: CMakeLists.txt  CMakePresets.json  README.md
io_multiplexing/src/: poll.cpp
kalman-filter/: CMakeLists.txt  README.md
kalman-filter/src/: capstone.cpp  captstone_utils.h  display.cpp  display.h  kalmanfilter.h  kalmanfilter_ekf_capstone_answer.cpp  kalmanfilter_ekf_student.cpp  kalmanfilter_lkf_student.cpp  simulation.cpp  test_lidar.cpp  utils.cpp  utils.h
metaprogramming/: .gitignore  Makefile  move_semantics.cpp  unique.cpp
miner/: .clang-tidy  .gitignore  README.md
miner/cmake-projects/cpp-miner/: CMakeLists.txt  CMakePresets.json  README.md
miner/cmake-projects/cpp-miner/include/miner/: block.h  miner.h  sha256.h
miner/cmake-projects/cpp-miner/src/: block.cpp  main.cpp  miner.cpp  sha256.cpp
miner/cmake-projects/cpp-miner/tests/: main.cpp  reference_hash.py  test_block.cpp  test_miner.cpp  test_sha256.cpp
modern-cpp-tdd-textbook/: .gitignore
modern-cpp-tdd-textbook/a-first-example/: CMakeLists.txt  README.md  Soundex.h  SoundexTest.cpp
modern-cpp-tdd-textbook/test-doubles/: Address.h  AddressExtractor.cpp  AddressExtractor.h  AddressExtractorTest.cpp  CMakeLists.txt  Http.h  PlaceDescriptionService.cpp  PlaceDescriptionService.h  PlaceDescriptionServiceTest.cpp  main.cpp
mtls/: CMakeLists.txt  README.md
mtls/include/: request_handler.h
mtls/src/: async_http_client.cpp  async_http_client_ssl.cpp  async_http_server.cpp  async_http_server_ssl.cpp  cancel_logic.cpp  request_handler.cpp  simple_http_client.cpp
nanopb/: CMakeLists.txt  CMakePresets.json  README.md
nanopb/proto/: messages.options  messages.pb.c  messages.pb.h  messages.proto
nanopb/src/: main.cpp
nix/: README.md
nix/workspace-a/: data.txt  file_a.nix  file_b.nix  shell.nix
nix/workspace-b/: README.md  default.nix
python-image-libraries/: rasterio_intro.py  skimage_intro.py
react-tutorial/src/: index.js
rust-intro/: README.md  notes.txt
rust-intro/sim2/: Cargo.toml  README.md
rust-intro/zmq_logger/: Cargo.toml  README.md
rust-macros/: README.md
rust-macros/proc_macros/: Cargo.toml
sim2-gtk/: README.md  build.bat  makefile  run.bat
socket-programming/: Makefile  README.md  hellod.cpp  listener.cpp  nonblocking.cpp  showip.cpp  talker.cpp
stm32-echo-server/: Makefile  README.md  STM32H743ZITx_FLASH.ld  app.cpp  app.h  base.cpp  base.h  stm32h7xx_hal_conf.h  stm32h7xx_it.c  stm32h7xx_it.h
symbolic-calculator/: Evaluator.hs  Lexer.hs  Main.hs  Parser.hs  README.md  sym-calc.cabal
tilt-estimation/: README.md  inclinometer.py  main.py  methodA.py
tokio-intro/: Cargo.toml  README.md
verilog/: verilog_notes.v
vs-debugging-with-gdb/: README.md
zephyr-intro/: README.md
zeromq/: .gitignore  CMakeLists.txt  README.md
zeromq/include/: pub.h  pub_thread.h  rep_thread.h  sub.h
zeromq/src/: main.cpp  main_zeromq.cpp
(+60 files in other folders)
