[package]
name = "msgserver"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
defmt = "0.3.10"
defmt-rtt = "0.4.2"
embassy-executor = { version = "0.7.0", features = ["defmt", "arch-cortex-m", "executor-thread", "task-arena-size-32768"] }
embassy-net = { version = "0.6.0", features = ["defmt", "dhcpv4", "dns", "medium-ethernet", "proto-ipv4", "tcp"] }

embassy-stm32 = { version = "0.2.0", features = ["defmt", "stm32h743zi", "time-driver-tim2", "exti", "memory-x", "unstable-pac", "chrono"] }
embassy-time = { version = "0.4.0", features = ["defmt"] }
heapless = "0.8.0"
panic-probe = { version = "0.3.2", features = ["print-defmt"] }
rand_core = "0.9.3"
static_cell = "2.1.0"

[profile.release]
debug = 2
