[package]
name = "hypermtls"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
env_logger = "0.11.7"
http = "1.3.1"
http-body-util = "0.1.3"
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = "0.27.5"
hyper-util = { version = "0.1.10", features = ["full"] }
log = "0.4.27"
rustls = "0.23.25"
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tokio-rustls = "0.26.2"
